--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/agence-web-design-lyon.png" class="center-block image-resize-mode" width="100"
+						<img src="img/agence-web-design-lyon.png" class="center-block image-resize-mode" width="150" height="150"
 							alt="logo de La chouette agence">
 						<h1>La chouette agence.</h1>
 
