--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 		<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-					<div class="col-sm-12 text-center">
-						<img alt="stratégie-web-lyon" src="img/title.png" />
+					<div class="text1">
+						<p> La Chouette Agence est une agence de Web Design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -161,8 +161,8 @@
 		<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12 text-center">
-						<img alt="web-design-lyon" src="img/title2.png" />
+					<div class="text1">
+						<p>Nous travaillons avec beaucoup de clients, voici nos réalisations</p>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
