--- a/Contact.html
+++ b/Contact.html
@@ -103,9 +103,9 @@
 					</form>
 				</div>
 				<div class="col-sm-6">
-					<p>
+					<p id="address">
 						<a href="mailto:contact@lachouetteagence.com">contact@lachouetteagence.com</a><br>2 place
-						Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
+						Sathonay,<br> 69001 Lyon<br>Ouvert de 9h à 18h, du lundi
 						au vendredi<br>
 					</p>
 				</div>
