--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="site-navigation nav navbar-nav">
 						<li><a href="index.html">Accueil</a></li>
-						<li><a href="Contact.html">Contact</a></li>
+						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -230,7 +230,7 @@
 				<div class="row black-background">
 					<p class="premier">Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !</p>
 					<div class="col-sm-12 text-center">
-						<a href="Contact.html" class="btn btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="contact.html" class="btn btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
